@@ -67,6 +67,7 @@ void CheckListBoxTestCase::Check()
 {
     EventCounter toggled(m_check, wxEVT_COMMAND_CHECKLISTBOX_TOGGLED);
 
+    wxArrayInt checkedItems;
     wxArrayString testitems;
     testitems.Add("item 0");
     testitems.Add("item 1");
@@ -83,6 +84,9 @@ void CheckListBoxTestCase::Check()
     CPPUNIT_ASSERT_EQUAL(0, toggled.GetCount());
     CPPUNIT_ASSERT_EQUAL(true, m_check->IsChecked(0));
     CPPUNIT_ASSERT_EQUAL(false, m_check->IsChecked(1));
+
+    CPPUNIT_ASSERT_EQUAL(1, m_check->GetCheckedItems(checkedItems));
+    CPPUNIT_ASSERT_EQUAL(0, checkedItems[0]);
 
     //Make sure a double check of an items doesn't deselect it
     m_check->Check(0);
